[gd_scene load_steps=4 format=3 uid="uid://bqr47tcimigpn"]

[ext_resource type="Script" uid="uid://bfrt5gv16fyo8" path="res://editor/base/subtitle/path_bind_form.gd" id="1_dx8tw"]
[ext_resource type="Theme" uid="uid://bsl383kbf47f4" path="res://editor/base/subtitle/path_bind_form.tres" id="2_qy4du"]
[ext_resource type="Script" uid="uid://c7m2kbcwi7aiu" path="res://editor/base/drop_node_cb.gd" id="3_qy4du"]

[node name="PathBindForm" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -772.0
offset_bottom = -171.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dx8tw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Label"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_qy4du")
text = "data/"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 330

[node name="PanelContainer_audio_path" type="PanelContainer" parent="VBoxContainer/HBoxContainer2/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/HSplitContainer/PanelContainer_audio_path"]
layout_mode = 2

[node name="HScrollBar_audio_path" type="HScrollBar" parent="VBoxContainer/HBoxContainer2/HSplitContainer/PanelContainer_audio_path/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
page = 100.0

[node name="audio_ref_Control" type="Control" parent="VBoxContainer/HBoxContainer2/HSplitContainer/PanelContainer_audio_path/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_qy4du")

[node name="root_ctrl_audio_path" type="Control" parent="VBoxContainer/HBoxContainer2/HSplitContainer/PanelContainer_audio_path/VBoxContainer/audio_ref_Control"]
unique_name_in_owner = true
anchors_preset = 0
size_flags_vertical = 3
mouse_filter = 2

[node name="select_ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer2/HSplitContainer/PanelContainer_audio_path/VBoxContainer/audio_ref_Control/root_ctrl_audio_path"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 308.0
offset_bottom = 17.0
color = Color(0.7, 0.7, 0.7, 0.3764706)

[node name="VBoxContainer_audio" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/HSplitContainer/PanelContainer_audio_path/VBoxContainer/audio_ref_Control/root_ctrl_audio_path"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 17.0
offset_bottom = 15.0
theme_override_constants/separation = 0

[node name="PanelContainer_lrc_path" type="PanelContainer" parent="VBoxContainer/HBoxContainer2/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/HSplitContainer/PanelContainer_lrc_path"]
layout_mode = 2

[node name="HScrollBar_lrc_path" type="HScrollBar" parent="VBoxContainer/HBoxContainer2/HSplitContainer/PanelContainer_lrc_path/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
page = 100.0

[node name="lrc_main_ctrl" type="Control" parent="VBoxContainer/HBoxContainer2/HSplitContainer/PanelContainer_lrc_path/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_qy4du")
script = ExtResource("3_qy4du")

[node name="root_ctrl_lrc_path" type="Control" parent="VBoxContainer/HBoxContainer2/HSplitContainer/PanelContainer_lrc_path/VBoxContainer/lrc_main_ctrl"]
unique_name_in_owner = true
anchors_preset = 0
size_flags_vertical = 3
mouse_filter = 2

[node name="VBoxContainer_lrc" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/HSplitContainer/PanelContainer_lrc_path/VBoxContainer/lrc_main_ctrl/root_ctrl_lrc_path"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0

[node name="VScrollBar" type="VScrollBar" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
page = 10.0
custom_step = 10.0
